--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Päävalikko</title>
 </head>
 <body>
-$END$
+<h1>Päävalikko</h1>
+<form action="/student.html">
+    <input type="submit" value="Lisää opiskelija">
+</form>
+<br>
+<form action="/course.html">
+    <input type="submit" value="Lisää kurssi">
+</form>
+<br>
+<form action="/students">
+    <input type="submit" value="Näytä opiskelijat">
+</form>
+<br>
+<form action="/courses">
+    <input type="submit" value="Näytä kurssit">
+</form>
+<br>
+<form action="/enroll.html">
+    <input type="submit" value="Lisää opiskelija kurssille">
+</form>
+<br>
+<form action="/getenroll.html">
+    <input type="submit" value="Näytä opiskelijat kurssilla">
+</form>
 </body>
 </html>
